tests/baselines/reference/tsxReactEmit7.errors.txt
file.tsx(8,10): error TS2874: This JSX tag requires 'React' to be in scope, but it could not be found.
file.tsx(9,10): error TS2874: This JSX tag requires 'React' to be in scope, but it could not be found.
file.tsx(10,10): error TS2874: This JSX tag requires 'React' to be in scope, but it could not be found.
file.tsx(11,10): error TS2874: This JSX tag requires 'React' to be in scope, but it could not be found.
file.tsx(14,10): error TS2874: This JSX tag requires 'React' to be in scope, but it could not be found.
file.tsx(15,10): error TS2874: This JSX tag requires 'React' to be in scope, but it could not be found.
file.tsx(16,10): error TS2874: This JSX tag requires 'React' to be in scope, but it could not be found.
file.tsx(17,10): error TS2874: This JSX tag requires 'React' to be in scope, but it could not be found.
file.tsx(18,10): error TS2874: This JSX tag requires 'React' to be in scope, but it could not be found.


==== file.tsx (9 errors) ====
    declare module JSX {
    	interface Element { }
    	interface IntrinsicElements {
    		[s: string]: any;
    	}
    }
    
    var m = <div x-y="val"></div>;
             ~~~
!!! error TS2874: This JSX tag requires 'React' to be in scope, but it could not be found.
    var n = <div xx-y="val"></div>;
             ~~~
!!! error TS2874: This JSX tag requires 'React' to be in scope, but it could not be found.
    var o = <div x-yy="val"></div>;
             ~~~
!!! error TS2874: This JSX tag requires 'React' to be in scope, but it could not be found.
    var p = <div xx-yy="val"></div>;
             ~~~
!!! error TS2874: This JSX tag requires 'React' to be in scope, but it could not be found.
    
    // Investigation
    var a = <div x="val"></div>;
             ~~~
!!! error TS2874: This JSX tag requires 'React' to be in scope, but it could not be found.
    var b = <div xx="val"></div>;
             ~~~
!!! error TS2874: This JSX tag requires 'React' to be in scope, but it could not be found.
    var c = <div xxx="val"></div>;
             ~~~
!!! error TS2874: This JSX tag requires 'React' to be in scope, but it could not be found.
    var d = <div xxxx="val"></div>;
             ~~~
!!! error TS2874: This JSX tag requires 'React' to be in scope, but it could not be found.
    var e = <div xxxxx="val"></div>;
             ~~~
!!! error TS2874: This JSX tag requires 'React' to be in scope, but it could not be found.
    